# pyrobotsim-docs

./: .gitignore  .gitpod.yml  Makefile  Readme.md  requirements.txt
directives/: pyrobotsim.py
docs/: Makefile  Readme.md  pyproject.toml
docs/directives/: pyrobotsim.py
docs/source/: articles.bib  basic-features.rst  books.bib  conf.py  creating-virtual-world.rst  how-it-works.rst  index.rst  infos.py  introduction.rst  references.rst  share-and-configure.rst  simulator-features.rst  sphinx-playground.rst
docs/source/worlds/: 00-main.rst  ant.rst  between2walls.rst  bgImageWorld.rst  emptyWorld.rst  main.rst  slalom.rst  strips.rst
presentation/Pyrobotsim Presentation/: package.json  slides.md
source/: conf.py  figures.pptx  how-it-works.rst  index.rst  mbrobot-module.rst  online.bib  plan.rst  simulator-features.rst
source/scripts/: asyncify.py
source/worlds/: ant.rst  between2walls.rst  emptyWorld.rst  escapeGame.rst  experimentDistance.rst  searchTarget.rst
